# something_with_bevy

./: Cargo.toml  README.md
assets/: create_metallic_roughness.py  toktx_dir.sh
assets/Brick Wall of Medieval Forts 2k/: ao.ktx2  base_color.ktx2
assets/Medieval Timbered Wall 2k/: ao.ktx2  metallic_roughness.ktx2  source.txt  wall.gltf
assets/Orange Clay Rooftop Tiles 2k/: ao.ktx2  roof.gltf  source.txt
assets/Pond Side Grassy and Muddy Land 2k/: metallic_roughness.ktx2  source.txt
assets/materials/Brick Wall of Medieval Forts 2k/: metallic_roughness.ktx2  source.txt
assets/materials/Medieval Timbered Wall 2k/: source.txt
assets/materials/Orange Clay Rooftop Tiles 2k/: normal_opengl.ktx2  roughness.ktx2
assets/materials/Pond Side Grassy and Muddy Land 2k/: source.txt
assets/materials/Rough Parallel Wood Plank Texture 2k/: ao.ktx2  roughness.ktx2  source.txt
assets/materials/Sandy Trail Texture with Rocks Pebbles and Plants 2k/: ao.ktx2  metallic_roughness.ktx2  source.txt
assets/models/: floor.gltf  roof.gltf  wall.gltf
src/: main.rs
src/building/: building.rs  building_assets.rs  building_menu.rs  mod.rs  snapping.rs
src/main_menu/: main_menu.rs  mod.rs  settings_menu.rs
src/settings/: game_settings.rs  keyboard.rs  mod.rs  mouse.rs  plugin.rs  video.rs
src/universal_camera_controller/: flying_camera.rs  mod.rs  plugin.rs  ray_casting.rs  settings.rs  spherical_camera.rs
